# Transparent-Board-Scanner

./: LICENSE  README.md  pyproject.toml
transparent_board_scanner/: main.py
